# template-python-rust-cmd

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  ENHANCE.md  LICENSE  LINTING.md  README.md  UPDATE.md  action.yml  ci.py  ci.sh  install  lint  publish  pyproject.toml  rust-toolchain.toml  test
.cargo/: README.md  config.toml
.claude/: README.md  settings.json
.github/: README.md
.github/workflows/: README.md  ci.yml
action/: README.md
action/cleanup/: README.md  action.yml
ci/: README.md  __init__.py  build_wheel.py  lint.py  publish.py  test.py
ci/gates/: README.md  __init__.py  action_surface.py  action_yaml.py  backend_smoke.py  build.py  clippy.py  fmt.py  loc.py  ruff.py  test.py
ci/hooks/: README.md  check-on-start.py  loc_guard.py  readme_guard.py  tool_guard.py
crates/: README.md
crates/template-cli/: Cargo.toml  README.md
crates/template-cli/src/: main.rs
crates/template-core/: Cargo.toml  README.md
crates/template-core/src/: lib.rs
crates/template-py/: Cargo.toml  README.md
crates/template-py/src/: lib.rs
docs/: ARCHITECTURE.md  README.md  RELEASE.md
src/: README.md
src/template_python_rust_cmd/: README.md  __init__.py  _native.cp313-win_amd64.pyd  _native.pyi  bindings.py  cli.py
tests/: README.md  test_bindings.py  test_cli.py  test_gates.py  test_version.py
