[package]
name = "template-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bare Rust binary shipped with the Python package"

[[bin]]
name = "template-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
template_core = { package = "template-core", path = "../template-core" }
